--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -3,3 +3,9 @@
     %li
       %a{href: pet.url} 
         =pet.title
+      %p= "#{pet.comments.count} 评论" 
+      %table.table{style: "margin-left: 70px"}
+        %tbody
+          - pet.comments.each do |comment|
+            %tr
+              %td= comment.content
