--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -1,11 +1,6 @@
 %ul
   - @pets.each do |pet|
-    %li
+    %li{style:"margin-bottom: 20px"}
       %a{href: pet.url} 
         =pet.title
-      %p= "#{pet.comments.count} 评论" 
-      %table.table{style: "margin-left: 70px"}
-        %tbody
-          - pet.comments.each do |comment|
-            %tr
-              %td= comment.content
+      %a{href: pet_path(pet),style:"display: block"}= "#{pet.comments.count} 评论" 
