--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -1,6 +1,13 @@
+.well{style: "float:right"}
+  %a{href: new_pet_path}
+    Submit a Link
+//%div{ style:"margin-bottom: 30px"}
 %ul
   - @pets.each do |pet|
     %li{style:"margin-bottom: 20px"}
-      %a{href: pet.url} 
-        =pet.title
-      %a{href: pet_path(pet),style:"display: block"}= "#{pet.comments.count} 评论" 
+      %p
+        %a{href: pet.url} 
+          =pet.title
+      %p
+        %a{href: pet_path(pet)}
+          = "#{pet.comments.count} 评论" 
