--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -2,9 +2,7 @@
   =@pet.title
 %p= "#{@pet.comments.count} 评论" 
 
-= form_for @comment do |f|
-  %div{style: "display:none"}
-    =f.text_field(:pet_id)
+= form_for [@pet,@comment] do |f|
   =f.text_area(:content,rows: 6)
   .button=f.submit("save")
   
