change form_for to form_tag

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,5 +1,10 @@
-= form_for [@pet,@comment] do |f|
-  =f.text_area(:content,rows: 6)
-  .button=f.submit("save")
+// use form_for
+/#= form_for [@pet,@comment] do |f|
+/#  =f.text_area(:content,rows: 6)
+/#  .button=f.submit("save")
   
 
+// use form_tag
+= form_tag(pet_comments_path(@pet,@comment),method: "post" )do 
+  = text_area_tag("comment[content]")
+  .button= submit_tag("save")
