valid and helper

--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -11,7 +11,7 @@
 
       %td
         %p
-          %a{href: pet.url} 
+          %a{href: fix_url(pet.url)} 
             =pet.title
         %p
           %a{href: pet_path(pet)}
