--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
   <%= yield(:head) %>
 </head>
 <body>
+    <header class="navbar navbar-fixed-top">
+      <nav class="navbar-inner">
+        <div class="container">
+          <%= render 'layouts/navigation' %>
+        </div>
+      </nav>
+    </header>  
     <div id="main" role="main">
       <div class="container">
         <div class="content">
@@ -17,10 +24,12 @@
               <%= yield %>
             </div>
           </div>
-          <footer>
-          </footer>
+            <footer>  
+            <a href=<%=root_path%>>top page</a>
+            </footer>  
         </div>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
+
 </body>
 </html>
