--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -14,5 +14,8 @@
           %a{href: fix_url(pet.url)} 
             =pet.title
         %p
+          by 
+          =pet.user.username
+        %p
           %a{href: pet_path(pet)}
             = "#{pet.comments.count} 评论" 
