show username in pet/show

--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -3,7 +3,8 @@
   .span4
     %a{href: fix_url(@pet.url),style:"display: block"} 
       =@pet.title
-    promoted by 
+    promoted by :
+    =@pet.user.username
     %p= "#{@pet.comments.count} 评论" 
 
 
