--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,9 +1,7 @@
 Navigation
 |
-/#=params
-/#|
 %div{style: "float:right"}
-  - if is_login
+  - if logged?
     =session[:user][:username]
     <br/>
     =link_to "log out",logout_path
@@ -11,9 +9,4 @@ Navigation
     =link_to "log in",login_path(origin_path: request.fullpath)
     <br/>or 
     =link_to "sign up",register_path
-    
-
-
-
-
 
