--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -1,5 +1,5 @@
 .well.row-fluid
-  = render @pet.vote
+  = render 'votes/vote'
   .span4
     %a{href: fix_url(@pet.url),style:"display: block"} 
       = @pet.title
