add user profile page

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,7 +2,7 @@ Navigation
 |
 %div{style: "float:right"}
   - if logged?
-    =session[:user][:username]
+    =link_to session[:user][:username], user_path(session[:user])
     <br/>
     =link_to "log out",logout_path
   - else
