finish user profile

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -6,7 +6,7 @@
   = f.password_field(:password)
 
   = f.label(:twitter_handle,"twitter帐号")
-  = f.password_field(:twitter_handle)
+  = f.text_field(:twitter_handle)
 
   .button=f.submit("确认")
 
