--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,5 +1,10 @@
-Navigation
-|
+%ul.nav
+  - Topic.all.each do |topic|
+    %li
+      = link_to  topic_path(topic) do
+        %strong= topic.topic_name
+
+
 %div{style: "float:right"}
   - if logged?
     =link_to session[:user][:username], user_path(session[:user])
