--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -1,20 +1,1 @@
-.well{style: "float:right"}
-  %a{href: new_pet_path}
-    Submit a Link
-%table.table-striped
-  - @pets.each do |pet|
-    -@pet = pet
-    %tr{style:"margin-bottom: 20px"}
-      %td
-        = render 'votes/vote'
-
-      %td
-        %p
-          %a{href: fix_url(@pet.url)}
-            = @pet.title
-        %p
-          by
-          = link_to @pet.user.username, user_path(@pet.user)
-        %p
-          %a{href: pet_path(@pet)}
-            = "#{@pet.comments.count} 评论"
+= render "index"
