--- a/app/views/pets/new.html.haml
+++ b/app/views/pets/new.html.haml
@@ -5,5 +5,8 @@
   = f.label(:url, "url")
   = f.text_area(:url, rows: 5)
 
+  = f.label(:topic_name, "主题")
+  = f.text_field(:topic_name)
+
   .button= f.submit("提交")
 
