add a small tip on nav

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,9 +1,12 @@
 %ul.nav
+  %li
+    #tip.btn{rel: "tooltip",data:{title: "This page is just a toy, feel free to try anything you want",trigger:"hover", placement: "right"}}
+      Tip
+
   - Topic.all.each do |topic|
     %li
       = link_to  topic_path(topic) do
         %strong= topic.topic_name
-
 
 %div{style: "float:right"}
   - if logged?
